<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="have_an_account">Have an account? Sign In!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="next">Next</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="choose_image">Choose Image</string>
    <string name="lets_start_dating">Let\'s start dating</string>
    <string name="sent_email_verification">Sent email verification to your email</string>
</resources>